--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <input type="text" id="input-el">
-    <button id="input-btn" type="submit">SAVE INPUT</button>
+    <button id="input-btn" type="submit">Save Address</button>
+    <button id="tab-btn" type="submit">Save Tab</button>
+    <button id="del-btn">Delete All</button>
     <ul id="ul-el">
 
     </ul>
